--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,6 @@
 PORT=8080
-NODE_ENV=development
-MONGO_URI=''
+NODE_ENV=development_or_production
+MONGO_URI=your_mongo_connection_string_here
+SESSION_SECRET=your_session_secret_here
+GITHUB_CLIENT_ID=your_github_client_id_here
+GITHUB_CLIENT_SECRET=your_github_client_secret_here
